# eddymotion

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .mailmap  .readthedocs.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: github-actions.yml
.maint/: contributors.json  paper_author_list.py  update_zenodo.py
ci/: requirements.txt
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/reference/: eddymotion.rst  index.rst
src/eddymotion/: __init__.py  __main__.py  _version.py  cli.py  dmri.py  estimator.py  model.py  viz.py
src/eddymotion/tests/: test_estimator.py  test_integration.py  test_model.py
tests/: test_eddymotion.py
